# WindowsAiMic

./: .gitignore  CMakeLists.txt  LICENSE  QUICK_START.md  README.md
.agent/workflows/: build-and-run.md
.github/workflows/: build.yml
app/: CMakeLists.txt
app/resources/: app.rc
app/src/: main.cpp  pipe_client.cpp  pipe_client.h  settings_window.cpp  settings_window.h  tray_app.cpp  tray_app.h
config/: default_config.json
docs/: IMPLEMENTATION_PLAN.md
driver/: WindowsAiMicDriver.inf
driver/src/: driver.c
engine/: CMakeLists.txt
engine/libs/rnnoise/: CMakeLists.txt
engine/src/: engine.cpp  engine.h  main.cpp
engine/src/ai/: ai_processor_interface.h  openvino_processor.cpp  openvino_processor.h  rnnoise_processor.cpp  rnnoise_processor.h
engine/src/audio/: audio_buffer.cpp  audio_buffer.h  resampler.cpp  resampler.h  wasapi_capture.cpp  wasapi_capture.h  wasapi_render.cpp  wasapi_render.h
engine/src/config/: config_manager.cpp  config_manager.h  config_types.h
engine/src/dsp/: biquad_filter.cpp  biquad_filter.h  compressor.cpp  compressor.h  dsp_processor_interface.h  equalizer.cpp  equalizer.h  expander.cpp  expander.h  limiter.cpp  limiter.h  metering.cpp  metering.h
engine/src/ipc/: pipe_server.cpp  pipe_server.h
engine/src/platform/: cpu_features.cpp  cpu_features.h  simd_dsp.h  thread_utils.h
installer/: WindowsAiMic.wxs
scripts/: build.ps1  install-openvino.ps1  install.ps1  quick-setup.ps1  setup-driver.ps1
